  * debclean: add a -d option to skip build dependencies check.
    (Closes: #370066)

  [ Julian Gilbey ]
  * debchange: load URI::Escape module carefully to give a meaningful
    warning message if the liburi-perl package is not installed

  [ Christoph Berg ]
  * uscan: use a different project in the example for the sf.net redirector.
    (Closes: #418978)

 -- Christoph Berg <myon@debian.org>  Mon, 16 Apr 2007 11:48:18 +0000

devscripts (2.10.2) unstable; urgency=low

  * The "zobel's birthday" upload.

  [ Adam D. Barratt ]
  * scripts/Makefile: Override make's default .sh rule so that the package
    version string actually gets written to the scripts
  * debian/rules: Fix check for unwanted debug information to account for
    bts now being in scripts/
  * Fix encoding of French manpages (Closes: #415240)
  * bts
    + Update prunecache() for maintainer / status mboxes and version graphs
    + Simplify version graph handling code (should now handle all graphs
      correctly)
    + Add support for fixed / notfixed (Closes: #340838)
  * Documentation fixes, based on suggestions from Adeodato Simó
    + debian/control: update description of debcommit
    + README: replace reference to bazaar with bzr
    + nmudiff.1: add missing unbold after an option
    + dscverify.pl: remove obsolete comment
      (Closes: #415486)

  [ Martin Zobel-Helas ]
  * Adding myself to Uploaders
  * bts
    + add option to only get bugs never downloaded before (Closes: #366925)
    + dont forward bugs within the bts (Closes: #406632)
  * include sample procmail script for autosubscribing to bugs
    (Closes: #353048)

  [ Christoph Berg ]
  * debcommit: support hg/mercurial and revamp manpage a bit.
  * debian/control: suggest mercurial and svk, wrap some fields for easier
    readability.
  * dpkg 1.14.0 will obsolete 822-date, apply patch by Guillem Jover to use
    `date -R` (Closes: #415794)

  [ James Vega ]